--- a/install
+++ b/install
@@ -1,10 +1,10 @@
 #!/usr/bin/env bash
 
 #set -e
-DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
+DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null 2>&1 && pwd)"
 echo "Repository is located at $DIR"
 cd $DIR
-export REPO="`git rev-parse --show-toplevel`"
+export REPO="$(git rev-parse --show-toplevel)"
 export BASH_DIR=$REPO/bash
 export SCRIPTS=$BASH_DIR/scripts
 
@@ -31,12 +31,11 @@ function script_init() {
 
 function generate_config() {
   echo -e "\nGenerating sources from $SCRIPTS"
-  echo "alias dotfiles='cd $DIR'" >> $REPO/$BASH_SRC
-  echo "alias srcbash='. $DIR/install'" >> $REPO/$BASH_SRC
-  for f in $SCRIPTS/*
-  do
+  echo "alias dotfiles='cd $DIR'" >>$REPO/$BASH_SRC
+  echo "alias srcbash='. $DIR/install'" >>$REPO/$BASH_SRC
+  for f in $SCRIPTS/*; do
     echo $f
-    cat $f >> $BASH_SRC
+    cat $f >>$BASH_SRC
   done
   os_patch
   echo "Done."
@@ -44,35 +43,44 @@ function generate_config() {
 
 # Path mismatches in supported command flags
 function os_patch() {
-  OS="`uname -s`"
+  OS="$(uname -s)"
   ARCH="uname -m"
   case $OS in
-    'Linux')
-      OS='Linux'
-      echo "alias ls='ls --color=auto'" >> $BASH_SRC
-      ;;
-    'FreeBSD')
-      OS='FreeBSD'
-      echo "alias ls='ls -G'" >> $BASH_SRC
-      ;;
-    'Darwin')
-      OS='Mac'
-      ;;
-    *) ;;
+  'Linux')
+    OS='Linux'
+    echo "alias ls='ls --color=auto'" >>$BASH_SRC
+    ;;
+  'FreeBSD')
+    OS='FreeBSD'
+    echo "alias ls='ls -G'" >>$BASH_SRC
+    ;;
+  'Darwin')
+    OS='Mac'
+    ;;
+  *) ;;
   esac
 }
 
 function link_bash() {
-  for f in $BASH_DIR/*
-  do
+  for f in $BASH_DIR/*; do
     FILENAME=$(basename $f)
     [[ -f $f ]] && ln -fsn -v $f $HOME/.$FILENAME
   done
 }
 
+function link_tmux() {
+  if [ -d "$dir/.tmux" ]; then :; else
+    echo -e "\nFound tmux configuration. Overwriting tmux conf files."
+    eval ln -s -f $dir/tmux/.tmux.conf ~/.tmux.conf
+    eval cp $dir/tmux/.tmux.conf.local ~/.tmux.conf.local
+  fi
+
+}
+
 init
 echo '------ Symlinking... ------'
 link_bash
+link_tmux
 echo '------ Done ------'
 
 # source $BASH_DIR/bash_profile
