--- a/install
+++ b/install
@@ -6,7 +6,7 @@ echo "Repository is located at $DIR"
 cd $DIR
 export REPO="$(git rev-parse --show-toplevel)"
 export BASH_DIR=$REPO/bash
-export SCRIPTS=$BASH_DIR/scripts
+export SCRIPTS=$BASH_DIR/utils
 
 function init() {
   echo $SCRIPTS
